{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 51,
  "lineage": "c45cf6b4-2afb-6fa7-9f32-1648bc8ceeab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arun_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404307124037:internet-gateway/igw-05db9502d31f78ae4",
            "id": "igw-05db9502d31f78ae4",
            "owner_id": "404307124037",
            "region": "us-east-1",
            "tags": {
              "Name": "arun-igw"
            },
            "tags_all": {
              "Name": "arun-igw"
            },
            "vpc_id": "vpc-06c92fcc755ec3bfb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.arun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arun_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404307124037:route-table/rtb-008f085e16027f7e9",
            "id": "rtb-008f085e16027f7e9",
            "owner_id": "404307124037",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05db9502d31f78ae4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "arun-route-table"
            },
            "tags_all": {
              "Name": "arun-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c92fcc755ec3bfb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "404307124037",
            "id": "rtb-008f085e16027f7e9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.arun_igw",
            "aws_vpc.arun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090482120f03d6a7b",
            "region": "us-east-1",
            "route_table_id": "rtb-008f085e16027f7e9",
            "subnet_id": "subnet-01020e59a8a7128a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.arun_igw",
            "aws_route_table.arun_route_table",
            "aws_subnet.arun_subnet",
            "aws_vpc.arun_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00279252061a7ce36",
            "region": "us-east-1",
            "route_table_id": "rtb-008f085e16027f7e9",
            "subnet_id": "subnet-0ab11c3be8efaca48"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.arun_igw",
            "aws_route_table.arun_route_table",
            "aws_subnet.arun_subnet",
            "aws_vpc.arun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arun_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404307124037:security-group/sg-05f35b80bb4dfae04",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f35b80bb4dfae04",
            "ingress": [],
            "name": "terraform-20260323084634178700000001",
            "name_prefix": "terraform-",
            "owner_id": "404307124037",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arun-cluster-sg"
            },
            "tags_all": {
              "Name": "arun-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c92fcc755ec3bfb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "404307124037",
            "id": "sg-05f35b80bb4dfae04",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.arun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arun_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404307124037:security-group/sg-0d51995a0cae946f1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d51995a0cae946f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20260323084634180100000002",
            "name_prefix": "terraform-",
            "owner_id": "404307124037",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "arun-node-sg"
            },
            "tags_all": {
              "Name": "arun-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c92fcc755ec3bfb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "404307124037",
            "id": "sg-0d51995a0cae946f1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.arun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arun_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404307124037:subnet/subnet-01020e59a8a7128a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01020e59a8a7128a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "404307124037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "arun-subnet-0"
            },
            "tags_all": {
              "Name": "arun-subnet-0"
            },
            "vpc_id": "vpc-06c92fcc755ec3bfb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "404307124037",
            "id": "subnet-01020e59a8a7128a9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.arun_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404307124037:subnet/subnet-0ab11c3be8efaca48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab11c3be8efaca48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "404307124037",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "arun-subnet-1"
            },
            "tags_all": {
              "Name": "arun-subnet-1"
            },
            "vpc_id": "vpc-06c92fcc755ec3bfb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "404307124037",
            "id": "subnet-0ab11c3be8efaca48",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.arun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arun_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404307124037:vpc/vpc-06c92fcc755ec3bfb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a570ecaee5ea5f58",
            "default_route_table_id": "rtb-03e1f65097a28f604",
            "default_security_group_id": "sg-044e4818cfa9ab56f",
            "dhcp_options_id": "dopt-0f58ea99f320fae0c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c92fcc755ec3bfb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e1f65097a28f604",
            "owner_id": "404307124037",
            "region": "us-east-1",
            "tags": {
              "Name": "arun-vpc"
            },
            "tags_all": {
              "Name": "arun-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "404307124037",
            "id": "vpc-06c92fcc755ec3bfb",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}